--- a/mta.yaml
+++ b/mta.yaml
@@ -14,36 +14,29 @@ modules:
       disk-quota: 256M
       memory: 256M
     requires:
-      # Removed: pm-analyzer-html5-repo-host requirement
+      - name: pm-analyzer-html5-repo-host # App Router needs to bind to HTML5 App Repo (direct binding)
       - name: pm-analyzer-destination # App Router still needs the Destination service
-      - name: pm-analyzer-fiori # App Router now requires the Fiori module to embed its content
-        parameters:
-          # This tells the App Router to include the Fiori app's build output
-          # at the path '/pm-analyzer-fiori' within its own artifact.
-          # This path must match the 'target-path' in the Fiori module's build-parameters.
-          target-path: resources/pm-analyzer-fiori
+      - name: pm-analyzer-fiori-content # App Router now requires the content module directly
 
   # ------------------------------------------------------------
-  # Fiori Frontend Module (now built directly into App Router)
+  # Fiori Frontend Module (now built as application content)
   # ------------------------------------------------------------
   - name: pm-analyzer-fiori
-    type: html5
+    type: com.sap.application.content # Changed type to application content
     path: pm-analyzer-fiori
     build-parameters:
       build-result: dist
       builder: custom
       commands:
         - npm install
-        - npm run build:cf # This script will now output to the App Router's resources
+        - npm run build:cf # This script will output to the App Router's resources
       supported-platforms: []
-      # Define where the Fiori app's build output goes relative to the MTA archive structure
-      # It will be placed under the 'resources' folder within the App Router module's artifact.
       target-path: resources/pm-analyzer-fiori # Output directly into approuter's resources
     properties:
       SAP_UI5_VERSION: 1.120.1
     # Removed requires for html5-repo-host as it's no longer used for serving UI
     provides:
-      - name: pm-analyzer-fiori-content # Still provided for internal MTA build consistency
+      - name: pm-analyzer-fiori-content # Provided as content for the App Router
 
   # Removed pm-analyzer-fiori-app-content module.
   # Its function (deploying to HTML5 Repo) is now obsolete.
@@ -53,8 +46,14 @@ modules:
 
 
 resources:
-  # Removed: HTML5 Application Repository Service (pm-analyzer-html5-repo-host)
-  # as UI will be served directly by App Router.
+  # ------------------------------------------------------------
+  # HTML5 Application Repository Service (to host UI5 app)
+  # ------------------------------------------------------------
+  - name: pm-analyzer-html5-repo-host
+    type: org.cloudfoundry.managed-service
+    parameters:
+      service: html5-apps-repo
+      service-plan: app-host
 
   # ------------------------------------------------------------
   # Destination Service (to manage backend connectivity for App Router)
