--- a/approuter/xs-app.json
+++ b/approuter/xs-app.json
@@ -10,9 +10,9 @@
       "httpMethods": ["GET", "POST", "PUT", "DELETE", "PATCH"]
     },
     {
-      "source": "^(.*)$",
+      "source": "^/pm-analyzer-fiori/(.*)$",
       "target": "$1",
-      "service": "html5-apps-repo-rt", 
+      "destination": "pm-analyzer-html5-repo-host",
       "authenticationType": "none"
     }
   ]
