--- a/mta.yaml
+++ b/mta.yaml
@@ -59,6 +59,7 @@ resources:
                 URL: https://html5-apps-repo-dt.cfapps.us10.hana.ondemand.com
                 Authentication: OAuth2ClientCredentials
                 ProxyType: Internet
+                # CORRECTED CASING FOR THE NEXT TWO LINES
                 tokenServiceURL: https://trial3-f5tqczxd.authentication.us10.hana.ondemand.com/oauth/token
                 clientId: "sb-2fd7de60-ec67-4e5f-af9e-f61a37505d43!b490740|html5-apps-repo-uaa!b424"
                 clientSecret: "1c936c0d-6b35-4b64-a35b-5afd5e79b4ff$tQMf7zf3KYGbf_XvDAYzQz_yE_CZuZjrR_r1AbpuD1E="
