--- a/pm-analyzer-fiori/package.json
+++ b/pm-analyzer-fiori/package.json
@@ -10,13 +10,14 @@
   ],
   "main": "webapp/index.html",
   "scripts": {
-    "preinstall": "rimraf webapp/libs", 
+    "preinstall": "rimraf webapp/libs",
     "start": "fiori run --open 'test/flpSandbox.html?sap-ui-xx-viewCache=false'",
     "start-local": "fiori run --config ./ui5-local.yaml --open 'test/flpSandbox.html?sap-ui-xx-viewCache=false'",
     "build": "ui5 build --clean-dest --config ui5.yaml",
     "deploy": "fiori verify",
     "deploy-config": "fiori add deploy-config",
     "build:cf": "ui5 build preload --clean-dest --config ui5-deploy.yaml --include-task=generateCachebusterInfo ui5-task-zipper",
+    "postbuild:cf": "cp -r dist/ ../approuter/resources/pm-analyzer-fiori/",
     "build:mta": "rimraf resources webapp/resources webapp/test-resources dist && mbt build --mtar archive",
     "start-mock": "fiori run --config ./ui5-mock.yaml --open 'test/flpSandbox.html?sap-ui-xx-viewCache=false'",
     "start-noflp": "fiori run --open 'index.html?sap-ui-xx-viewCache=false'"
