--- a/mta.yaml
+++ b/mta.yaml
@@ -18,7 +18,7 @@ modules:
             - .
           target-path: resources/
 
-  - name: pm-analyzer-fiori-build
+   - name: pm-analyzer-fiori-build
     type: html5
     path: pm-analyzer-fiori
     build-parameters:
@@ -26,6 +26,10 @@ modules:
       commands:
         - npm install
         - npm run build:cf
+      supported-platforms: []
+    parameters:
+      memory: 1G  # Request 1GB of memory for the build
+      disk-quota: 1G
 
 resources:
   - name: pm-analyzer-destination
