--- a/pm-analyzer-fiori/webapp/manifest.json
+++ b/pm-analyzer-fiori/webapp/manifest.json
@@ -12,7 +12,7 @@
                 "type": "REST"
             },
             "notificationsMockData": {
-                "uri": "mock_data_en.json",
+                "uri": "./mock_data_en.json",
                 "type": "JSON"
             }
         }
