--- a/pm-analyzer-fiori/ui5-local.yaml
+++ b/pm-analyzer-fiori/ui5-local.yaml
@@ -1,16 +1,15 @@
-# yaml-language-server: $schema=https://sap.github.io/ui5-tooling/schema/ui5.yaml.json
-
 specVersion: "3.1"
 metadata:
   name: com.sap.pm.pmanalyzerfiori
 type: application
 framework:
   name: SAPUI5
-  version: 1.138.0
+  version: "1.120.13" # Or your desired version
   libraries:
     - name: sap.m
     - name: sap.ui.core
-    - name: sap.ushell
+    - name: sap.ui.layout
+    - name: sap.ui.comp
     - name: themelib_sap_horizon
 server:
   customMiddleware:
@@ -20,29 +19,9 @@ server:
         port: 35729
         path: webapp
         delay: 300
-    - name: fiori-tools-preview
-      afterMiddleware: fiori-tools-appreload
-      configuration:
-        flp:
-          theme: sap_horizon
-          path: test/flpSandbox.html
-          intent:
-            object: comsappmpmanalyzerfiori
-            action: display
     - name: fiori-tools-proxy
       afterMiddleware: compression
       configuration:
-        ignoreCertError: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
         backend:
-          - path: /here
-            url: http://localhost
-    - name: sap-fe-mockserver
-      beforeMiddleware: csp
-      configuration:
-        mountPath: /
-        services:
-          - urlPath: /here/goes/your/serviceurl
-            metadataPath: ./webapp/localService/mainService/metadata.xml
-            mockdataPath: ./webapp/localService/mainService/data
-            generateMockData: true
-        annotations: []
+          - path: /api
+            url: http://localhost:5001
