--- a/approuter/xs-app.json
+++ b/approuter/xs-app.json
@@ -4,8 +4,8 @@
   "routes": [
     {
       "source": "^/api/(.*)$",
-      "target": "/api/$1",
-      "destination": "pm-analyzer-backend-url"
+      "target": "$1",
+      "destination": "pm-analyzer-backend"
     },
     {
       "source": "^/(.*)$",
