feat(frontend): Overhaul frontend with detailed data model
- Replaced the simple mock data with a more realistic, nested data model that includes work order details.
- Updated the worklist view to display more information, including priority and system status.
- Completely redesigned the object detail page to provide a comprehensive overview of a notification and its associated work order.
- Implemented a robust, static timeline visualization for notification and work order statuses.
- Fully internationalized all new UI elements with German translations.
- Corrected numerous layout, styling, and data binding issues to create a polished and professional user experience.

--- a/pm-analyzer-fiori/webapp/manifest.json
+++ b/pm-analyzer-fiori/webapp/manifest.json
@@ -35,7 +35,8 @@
                 "sap.m": {},
                 "sap.ui.core": {},
                 "sap.ui.layout": {},
-                "sap.ui.comp": {}
+                "sap.ui.comp": {},
+                "sap.suite.ui.commons": {}
             }
         },
         "contentDensities": { "compact": true, "cozy": true },
