--- a/backend/manifest.yml
+++ b/backend/manifest.yml
@@ -3,7 +3,7 @@ applications:
   path: .
   buildpack: python_buildpack
   command: gunicorn --bind 0.0.0.0:$PORT app.main:app
-  memory: 512M
-  disk_quota: 512M
+  memory: 256M
+  disk_quota: 1G
   routes:
   - route: pm-analyzer-backend-dev.cfapps.us10-001.hana.ondemand.com 
