docs: Update project documentation to reflect Suite architecture
Updated README.md, ONBOARDING.md, DECISION_LOG.md, and GEMINI_PROTOCOL.md to align with the new microservices structure, Docker Compose usage, and Vertex AI migration.

--- a/approuter/xs-app.json
+++ b/approuter/xs-app.json
@@ -9,8 +9,8 @@
     },
     {
       "source": "^/(.*)$",
-      "target": "$1",
-      "localDir": "resources/pm-analyzer-fiori/dist"
+      "target": "/$1",
+      "destination": "pm-analyzer-frontend"
     }
   ]
 }
