--- a/pm-analyzer/backend/app/config.json
+++ b/pm-analyzer/backend/app/config.json
@@ -1,16 +1,10 @@
 {
     "analysis_llm_settings": {
-        "model": "gemini-2.5-flash",
+        "model": "gemini-2.5-pro",
         "temperature": 0.2
     },
     "chat_llm_settings": {
-        "model": "gemini-2.5-flash",
+        "model": "gemini-2.5-pro",
         "temperature": 0.4
-    },
-    "quality_rules": [
-        "The long text must be detailed and clearly describe the problem.",
-        "A root cause for the issue must be identified.",
-        "An assessment of the product impact must be included.",
-        "Corrective and preventive actions (CAPA) must be outlined."
-    ]
+    }
 }
